<resources>
    <string name="app_name">Kopilochka</string>

    <string name="menu_start">Стартова сторінка</string>
    <string name="menu_notification">Повідомлення F5.ua</string>
    <string name="menu_action">Акції</string>
    <string name="menu_history">Історія реєстрацій</string>
    <string name="menu_data">Особисті дані</string>
    <string name="menu_wtf">Що я роблю не так?</string>

    <!--Common values-->
    <string name="ok">Ок</string>

    <string name="log_01_work_with">Програма працює лише з зареєстрованими учасниками партнерської програми F5.</string>
    <string name="log_01_to_manager">Якщо Ви не маєте логіну/паролю або забули, зверніться до відповідального менеджера F5.</string>
    <string name="log_01_login_text">Логін</string>
    <string name="log_01_password_text">Пароль</string>
    <string name="log_01_comin">Увійти</string>
    <string name="log_01_sorry">Вибачте, але Ви не є учасником партнерської програми F5.</string>
    <string name="log_01_sorry_expl">Ви можете звернутися за роз\'ясненням до відповідального менеджеру F5, або видалити програму.</string>
    <string name="log_01_not_active">Вибачте, але Ваш профіль заблоковано.</string>
    <string name="log_01_not_active_expl">Ви можете звернутися за роз\'ясненням до відповідального менеджеру F5, або видалити програму.</string>

    <string name="act_01_no_bonuses">На данний момент нарахування бонусів не проводиться. Чекайте повідомлення.</string>
    <string name="act_list_name">Назва</string>
    <string name="act_list_points">Балів</string>
    <string name="act_period_text">Період дії:</string>
    <string name="act_type_text">Тип акції:</string>
    <string name="act_data_text">Дата нарахування:</string>
    <string name="act_list_days">Залишилось днів:</string>
    <string name="act_register_model_button">Підтвердити реєстрацію</string>

    <string name="act_enter_serial_text">Введіть серійний номер або IMEI</string>
    <string name="act_p3_info_text">Для реєстрації смартфонів, планшетів и ноутбуків – вводьте IMEI, для побутової техники – серійний номер:</string>
    <string name="act_scan">Сканувати</string>
    <string name="act_edit">Редагувати</string>
    <string name="act_cancel">Відмінити</string>
    <string name="act_delete">Видалити</string>
    <string name="act_reg_success_title">Запит на реєстрацію серійного номеру (IMEI) успішно зроблено.</string>
    <string name="act_reg_success_text">Дізнатися результати реєстрації Ви можете в розділі Історія реєстрацій. Ви можете продовжувати реєструвати моделі.</string>
    <string name="act_reg_failed_title">Реєстрація продажу не була проведена через помилку у наведених Вами даних.</string>
    <string name="act_reg_failed_text">Щоб дізнатись деталі зверніться до Історії реєстрацій.</string>

    <string name="hist_title_1">Вдало зареєстровано</string>
    <string name="hist_title_2">Очікують реєстрації</string>
    <string name="hist_title_3">Невдала спроба реєстрації</string>
    <string name="hist_action_text">Акція</string>
    <string name="hist_model_text">Модель</string>
    <string name="hist_sn_imei_text">СН/IMEI</string>
    <string name="hist_sn_imei_hint">IMEI/Серійний номер</string>
    <string name="hist_reg_with_inet">Реєстрація відбудеться при наявності Інтернету</string>
    <string name="hist_reg_already">Ви вже реєстрували цей серійний номер/імеї, подивитися результат можна в Історії реєстрацій</string>
    <string name="hist_imei_sn_text">Серійний номер/імеі</string>
    <string name="hist_explan_text">Пояснення</string>

    <!--<string name="fin_contact_e_mail">Ваш контактный e-mail:</string>-->
    <!--<string name="fin_contact_phone">Ваш контактный телефон:</string>-->


    <string name="data_login_button_text">Увійти</string>
    <string name="data_extradata_button">Подивитися особисті дані</string>
    <string name="data_f5_ua_message">Змінити свої дані Ви можете на сайті F5.ua</string>
    <string name="data_name_hello">Добрий день, </string>
    <string name="data_email_text">Ваш контактний email:</string>
    <string name="data_email_text_empty">Не вказано</string>
    <string name="data_phone_text">Ваш контактний телефон:</string>
    <string name="data_phone_text_empty">Не вказано</string>
    <string name="data_bonus_to">Бонус буде нараховуватися </string>
    <string name="data_info_no_inet">Переглянути дані можливо при наявності Інтернету</string>

    <string name="data_bonus_planned">Заплановані нарахування бонусів</string>
    <string name="data_bonus_history">Історія нарахування бонусів</string>
    <string name="data_bonus_data">Дата</string>
    <string name="data_bonus_action">Акція</string>
    <string name="data_bonus_sum">Сума нарахування</string>
    <string name="data_bonus_about">Про нарахування</string>

    <string name="data_exit_title">Мобільне застосування kopilochka.f5 працює лише з одним активним користувачем. Якщо Ви вийдете з програми, всі поточні дані будуть видалені.</string>
    <string name="data_exit_text">УВАГА. Якщоо у Вас залишились серійні номери або імеі у черзі на реєстрацію, вони будуть втрачені без можливості відновлення.</string>
    <string name="data_exit_agree">Згоден</string>
    <string name="data_exit_dismiss">Відхилити</string>

    <string name="JSON_title_error">Помилка</string>
    <string name="JSON_text_error">Отримані дані пошкоджено, спробуйте пізніше.</string>
    <string name="JSON_button_error">Ок</string>
    <string name="internet_error">Відсутне з\'єднання з Інтернет.</string>

    <string name="start_cumulative_points">Накопичувальні бали</string>

    <string name="wtf_name_text">ПІБ:</string>
    <string name="wtf_email_text">email:</string>
    <string name="wtf_text_text">Питання:</string>
    <string name="wtf_send_button_text">Відправити</string>
    <string name="wtf_fields_title">Увага!</string>
    <string name="wtf_fields_not_complete">Не всі поля вірно заповнені.</string>
    <string name="wtf_sent_success">Питання успішно відправлено.</string>


    <string name="cancel_scan">Відмінити</string>

    <string name="input_error">Помилка вводу даних.</string>
    <string name="fill_all_fields">Заповніть будь ласка всі поля вірно.</string>
    <string name="input_ok">Ок</string>

    <string name="data_loading">Дані завантажуються. Хвилинку...</string>


    <string name="wtf_ok">Ок</string>
    <string name="warning_title">Увага!</string>

    <string name="warning_session_expired">Час токену вичерпано - залогіньтесь будь ласка.</string>
    <string name="warning_data_broken">Проводяться профілактичні роботи на сервері F5.ua, прохання спробувати зв\'язатись з нами пізніше. Просимо вибачення за незручності.</string>
    <string name="warning_user_not_active">Профіль користувача не активний, зверніться будь ласка до адміністрації Ф5.</string>
    <string name="warning_ok">Ок</string>
    <string name="unknown_error">Невідома помилка - зверніться до розробника будь ласка.</string>

    <string name="menu_exit_title">Вихід</string>
    <string name="menu_exit_text">Ви впевнені?</string>
    <string name="menu_exit_yes"> Так </string>
    <string name="menu_exit_no"> Ні </string>

    <string name="edit_title">Редагування</string>

    <string name="internal_base_error_title"> Помилка </string>
    <string name="internal_base_error_text"> Пошкоджено внутрішню базу, перевстановіть додаток. </string>

    <string name="call_sync_title">Увага!</string>
    <string name="call_sync_text">В наявності є моделі, що очікують реєстрації. Відправити їх зараз?</string>
    <string name="call_sync_text2">Реєстрацію проведено - результати можете подивитись у історії реєстрацій.</string>

    <string name="notification_ticker">Повідомлення</string>
    <string name="notification_good">Вдало зареєстровано - </string>
    <string name="notification_bad"> невдалих реєстрацій - </string>
    <string name="register_await">Серійний номер очікує на реєстрацію: він буде зареєстрований при наявності Інтернету.</string>
    <string name="register_error1">Серійний номер не було зареєстровано </string>
    <string name="register_error2"> за причини </string>
    <string name="register_error3">. Ви можете виправити помилку та спробувати ще раз.</string>
    <string name="register_success1">Серійний номер було вдало зареєстровано </string>
    <string name="register_success2">. Ви можете видалити серійний номер з Історії, при цьому він не буде видалений з бази реєстрації f5.ua</string>

</resources>
