<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        style="@style/myRegular_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_bonus_planned"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/data_bonus_data"
            android:id="@+id/textView2"
            style="@style/myTableH_13Base"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/data_bonus_action"
            android:id="@+id/textView3"
            style="@style/myTableH_13Base"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/data_bonus_sum"
            android:id="@+id/textView4"
            style="@style/myTableH_13Base"
            android:layout_weight="1"
            android:gravity="right"/>
    </LinearLayout>
</LinearLayout>