<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top_menu_logout"
        layout="@layout/top_menu_logout"/>

    <LinearLayout
        android:id="@+id/loged_layout"
        android:layout_below="@+id/top_menu_logout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/data_name_text"
            style="@style/myRegular_21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/data_name_name"
            style="@style/myWTF_TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/data_email_text"
            style="@style/myTableH_13Base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_email_text"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/data_email_email"
            style="@style/mySub_Black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/data_phone_text"
            style="@style/myTableH_13Base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_phone_text"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/data_phone_phone"
            style="@style/mySub_Black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/data_show_extra_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_extradata_button"
            style="@style/myWhite_24"
            android:background="@drawable/blue_button_selector"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>