<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/myDialogLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey_border_empty"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            style="@style/mySub_Black_18grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hist_action_text" />

        <TextView
            android:id="@+id/action_name"
            style="@style/mySub_Black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView10"
            style="@style/mySub_Black_18grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hist_model_text" />

        <TextView
            android:id="@+id/model_name"
            style="@style/mySub_Black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView11"
            style="@style/mySub_Black_18grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hist_imei_sn_text" />

        <TextView
            android:id="@+id/serial_numbers_list"
            style="@style/mySub_Black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/my_light_grey_color" />

        <TextView
            android:id="@+id/error_title"
            style="@style/mySub_Black_18grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hist_explan_text"
            android:visibility="visible" />

        <TextView
            android:id="@+id/error_text"
            style="@style/mySub_Black_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/action_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:background="@drawable/revert_button_selector" />

            <Button
                android:id="@+id/action_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_button_selector" />

            <Button
                android:id="@+id/action_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_weight="1"
                android:background="@drawable/bin_button_selector" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>